[gd_scene load_steps=18 format=1]

[ext_resource path="res://scripts/enemy_1.gd" type="Script" id=1]
[ext_resource path="res://resources/flash_shader.tres" type="Shader" id=2]
[ext_resource path="res://sprites/enemy_1.png" type="Texture" id=3]
[ext_resource path="res://sounds/alien_explosion.wav" type="Sample" id=4]
[ext_resource path="res://sounds/alien_hit.wav" type="Sample" id=5]
[ext_resource path="res://sounds/laser.wav" type="Sample" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8, 12 )

[sub_resource type="CanvasItemMaterial" id=2]

shader/shader = ExtResource( 2 )
shader/shading_mode = 0
shader_param/on = 0.0

[sub_resource type="Animation" id=3]

resource/name = "die"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25 ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 11 ]
}

[sub_resource type="Animation" id=5]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 13 ]
}

[sub_resource type="Animation" id=6]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=7]

length = 0.9
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( 2, -13, -20, -103, 46, -112 )

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( 46, -112, 202, -112, 203, 0, 2, 0, 2, -13 )

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 10, 13 )

[sub_resource type="SampleLibrary" id=11]

samples/alien_explosion = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/alien_hit = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/laser = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}

[node name="enemy_1" type="KinematicBody2D" groups=[
"enemies",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -12 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="rotate" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="rotate"]

material/material = SubResource( 2 )
transform/pos = Vector2( -16, -29 )
texture = ExtResource( 3 )
centered = false
vframes = 8
hframes = 8
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="rotate"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/die = SubResource( 3 )
anims/fire_side = SubResource( 4 )
anims/fire_up = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/run = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="raycast" type="RayCast2D" parent="rotate"]

transform/pos = Vector2( 6, -4 )
enabled = true
cast_to = Vector2( 0, 5 )
layer_mask = 1
type_mask = 15
__meta__ = {
"_edit_lock_": true
}

[node name="raycast_wall" type="RayCast2D" parent="rotate"]

transform/pos = Vector2( 4, -8 )
enabled = true
cast_to = Vector2( 5, 0 )
layer_mask = 1
type_mask = 15

[node name="vision" type="Area2D" parent="rotate"]

input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 9 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="visioncol" type="CollisionPolygon2D" parent="rotate/vision"]

build_mode = 0
polygon = Vector2Array( -20, -103, 46, -112, 202, -112, 203, 0, 2, 0, 2, -13 )
shape_range = Vector2( 0, 1 )
trigger = false
__meta__ = {
"_edit_lock_": true
}

[node name="bulletpos_1" type="Position2D" parent="rotate"]

transform/pos = Vector2( 6, -5 )
__meta__ = {
"_edit_lock_": true
}

[node name="bulletpos_2" type="Position2D" parent="rotate"]

transform/pos = Vector2( 4, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, -12 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="." groups=[
"enemy_hitbox",
]]

input/pickable = true
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -12 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( 0, -12 )
shape = SubResource( 10 )
trigger = false
_update_shape_index = 0

[node name="samples" type="SamplePlayer" parent="."]

config/polyphony = 10
config/samples = SubResource( 11 )
default/volume_db = -10.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


